change id creator method ASSIGN_ID